Table of users is working

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
 	<form method="post" action="/signup/authenticate">
 		Username: <input type="text" name="username"><br><br>
 		Email: <input type="text" name="email"><br><br>		
-		Password: <input type="text" name="pasword"><br><br>
+		Password: <input type="text" name="password"><br><br>
 		Password verification: <input type="text" name="verification"><br>
 		Where will the image go?
 		<button type="submit">Create user</button>
