--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,34 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    
-    {% if page %}
-    <title>So College | {{page}}</title>
-    {% else %}
-    <title>So College</title>
-    {% endif %}
-
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
-
-  </head>
-
-  <body>
-    <div>
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          <ul>
-            {% for message in messages %}
-              <p><strong>{{ message }}</strong></p>
-            {% endfor %}
-          </ul>
-        {% endif %}
-      {% endwith %}
-    </div>
-    
-    <div>
-      {% block content %}
-      {% endblock %}
-    </div>
-
-  </body>
+<head>
+	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+	{% if page %}
+	<title>So College | {{page}}</title>
+	{% else %}
+	<title>So College</title>
+	{% endif %}
+	<link rel="stylesheet" type="text/css" href="static/css/style.css">
+</head>
+<body>
+<div>
+	{% with messages = get_flashed_messages() %}
+		{% if messages %}
+		<ul>
+			{% for message in messages %}
+			<li><strong>{{ message }}</strong></li>
+			{% endfor %}
+		</ul>
+		{% endif %}
+	{% endwith %}
+</div>
+<div>
+	{% block content %}
+	{% endblock %}
+</div>
+<!--JavaScript at the bottom for faster loading-->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+</body>
 </html>
