--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 	<title>{% if page %}{{page}}&nbsp;&ndash;&nbsp;{% endif %}So College</title>
 </head>
-<body>
+<body style="padding-top: 50px;">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"><div class="container">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+		<a class="navbar-brand" href="{{ url_for('home') }}">So College</a>
+	</div><!--/.navbar-header-->
+	<div class="collapse navbar-collapse">
+		<ul class="nav navbar-nav">
+			<li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
+		</ul>
+		<a class="btn btn-default navbar-btn navbar-right" href="{{ url_for('signin') }}">Sign in</a>
+	</div><!--/.navbar-collapse-->
+</div></nav>
 <div class="container">
 {% with messages = get_flashed_messages() %}
 	{% if messages %}{% for message in messages %}<div class="alert alert-info">{{ message }}</div>{% endfor %}{% endif %}
@@ -13,6 +31,7 @@
 {% endblock %}
 </div>
 <!--JavaScript at the bottom for faster loading-->
+<script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
