--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,8 +1,16 @@
 {% extends "layout.html" %}
 {% block content %}
-	<form>
-		Username: <input type="text" name="username">
-		Password: <input type="text" name="password">
-		<button type="submit">Sign In</button>
-	</form>
+<div class="page-header"><h1>Sign in</h1></div>
+<div class="row"><form role="form" class="col-lg-3 col-md-4 col-sm-5">
+	<div class="form-group">
+		<label>Username</label>
+		<input type="text" class="form-control" name="username" placeholder="Enter your username">
+	</div>
+	<div class="form-group">
+		<label>Password</label>
+		<input type="password" class="form-control" name="password" placeholder="Enter your password">
+	</div>
+	<button type="submit" class="btn btn-lg btn-primary btn-block">Sign in</button>
+	<p class="lead text-center">Don't have an account? <a href="{{ url_for('signup') }}"><strong>Create one!</strong></a></p>
+</form></div>
 {% endblock %}
