--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="page-header"><h1>Sign in</h1></div>
-<div class="row"><form role="form" class="col-lg-3 col-md-4 col-sm-5">
+<div class="row"><form role="form" class="well col-lg-3 col-md-4 col-sm-5">
 	<div class="form-group">
 		<label>Username</label>
 		<input type="text" class="form-control" name="username" placeholder="Enter your username">
