--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="page-header"><h1>Sign up</h1></div>
-<div class="row"><form role="form" method="post" action="/signup/authenticate" class="col-lg-3 col-md-4 col-sm-5">
+<div class="row"><form role="form" method="post" action="/signup/authenticate" class="col-lg-4 col-md-5 col-sm-6">
+	<h3>Enter your information below.</h3>
 	<div class="form-group">
 		<label>Email address</label>
 		<input type="email" class="form-control" name="email" placeholder="Enter your email address">
