--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
-	<h1>Home Page</h1>
+<div class="jumbotron text-center">
+	<h1>Introducing So College!</h1>
+	<p>This is as far as I'll go in terms of UI until youse do some more internal work.</p>
+	<p><a class="btn btn-lg btn-primary">Wake me up when youse come back.</a></p>
+</div>
 {% endblock %}
