Remove dashboard link while signed out

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,9 @@
 	</div><!--/.navbar-header-->
 	<div class="collapse navbar-collapse">
 		<ul class="nav navbar-nav">
+			{% if 'username' in session %}
 			<li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
+			{% endif %}
 		</ul>
 		{% if 'username' in session %}
 		<div class="navbar-right">
