--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,10 @@
 </div></nav>
 <div class="container">
 {% with messages = get_flashed_messages() %}
-	{% if messages %}{% for message in messages %}<div class="alert alert-info">{{ message }}</div>{% endfor %}{% endif %}
+	{% if messages %}{% for message in messages %}<div class="alert alert-info alert-dismissable">
+		<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+		{{ message }}
+	</div>{% endfor %}{% endif %}
 {% endwith %}
 {% block content %}
 {% endblock %}
