venmo correction when signing out

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="jumbotron text-center">
-	<h1>Introducing So College!</h1>
+	<h1>Introducing MerpIt!</h1>
 	<p>This is as far as I'll go in terms of UI until youse do some more internal work.</p>
 	<p><a class="btn btn-lg btn-primary">Wake me up when youse come back.</a></p>
 </div>
