--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="{{ url_for('home') }}">So College</a>
+		<a class="navbar-brand" href="{{ url_for('home') }}">MerpIt!</a>
 	</div><!--/.navbar-header-->
 	<div class="collapse navbar-collapse">
 		<ul class="nav navbar-nav">
