hot fixed newpost.html, fixed method error

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
-{% block content %}<div>
+{% block content %}
+<div>
 <form role="form" method="post" action="/newpost/authenticate">
 	<h2>Enter posting information here.</h2><br>
 	Title: <input type="text" name="title" placeholder="Post title"><br>
