--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,8 @@
 {% block content %}
 <div class="jumbotron text-center">
 	<h1>Introducing MerpIt!</h1>
-	<p>This is as far as I'll go in terms of UI until youse do some more internal work.</p>
-	<p><a class="btn btn-lg btn-primary">Wake me up when youse come back.</a></p>
+	<a class="btn btn-lg btn-primary" href="{{ url_for('signin') }}">Signin</a>
+	<a class="btn btn-lg btn-primary" href="{{ url_for('signup') }}">Signup</a>
 
 </div>
 {% endblock %}
