--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
 
 		</ul>
 		<div class="navbar-right">
-			<p class="navbar-text"><i class="icon-user"></i>&nbsp;{{session['username']}}</p>
+			<p class="navbar-text"><a class="navbar-link" href="{{ url_for('editprofile') }}"><i class="icon-user"></i>&nbsp;{{session['username']}}</a></p>
 			<a class="btn btn-default navbar-btn" href="{{ url_for('signout') }}">Sign out</a>
 		</div>
 		{% else %}
