--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,11 +21,11 @@
 	<div class="col-lg-9">
 		<ul class="nav nav-pills">
 			<li class="active"><a href="#Merps" data-toggle="pill">Merps</a></li>
-			<li><a href="#Responses" data-toggle="pill">Responses</a></li>
+			<li><a href="#Own" data-toggle="pill">Your posts</a></li>
 		</ul>
 		<div class="pill-content">
 			<div class="pill-pane active table-responsive" id="Merps">
-				<table class="table">
+				<table class="table table-hover">
 					<tr>
 						<th>Title</th>
 						<th>Description</th>
@@ -50,8 +50,27 @@
 					{% endif %}
 				</table>
 			</div>
-			<div class="pill-pane" id="Responses">
-				<p>Responses!</p>
+			<div class="pill-pane table-responsive" id="Own">
+				<table class="table table-hover">
+					<tr>
+						<th>Title</th>
+						<th>Date</th>
+						<th>Operations</th>
+					</tr>
+					{% if posts %}
+					{% for post in posts %}{% if post.the_user == username %}
+					<tr>
+						<td>{{ post.title }}</td>
+						<td>{{ post.date }}</td>
+						<td>Reply, edit, delete</td>
+					</tr>
+					{% endfor %}
+					{% else %}
+					<tr>
+						<td colspan="3" class="text-center">No entries found.</td>
+					</tr>
+					{% endif %}
+				</table>
 			</div>
 		</div>
 	</div>
