Close if statement!

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -64,6 +64,7 @@
 						<td>{{ post.date }}</td>
 						<td>Reply, edit, delete</td>
 					</tr>
+					{% endif %}
 					{% endfor %}
 					{% else %}
 					<tr>
