Added dollar sign to balance

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,7 +13,7 @@
 					<dt>Phone</dt>
 					<dd>{{ phone }}</dd>
 					<dt>Balance</dt>
-					<dd>{{ balance }}</dd>
+					<dd>${{ balance }}</dd>
 				</dl>
 			</figcaption>
 		</figure>
