--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -34,15 +34,15 @@
 						<th>User</th>
 					</tr>
 					{% if posts %}
-					{% for post in posts %}
-					<tr>
-						<td>{{ post.title }}</td>
-						<td>{{ post.description }}</td>
-						<td>{{ post.pay }}</td>
-						<td>{{ post.date }}</td>
-						<td>{{ post.the_user }}</td>
-					</tr>
-					{% endfor %}
+						{% for post in posts %}
+						<tr>
+							<td>{{ post.title }}</td>
+							<td>{{ post.description }}</td>
+							<td>{{ post.pay }}</td>
+							<td>{{ post.date }}</td>
+							<td>{{ post.the_user }}</td>
+						</tr>
+						{% endfor %}
 					{% else %}
 					<tr>
 						<td colspan="5" class="text-center">No entries found.</td>
@@ -58,13 +58,17 @@
 						<th>Operations</th>
 					</tr>
 					{% if posts %}
-					{% for post in posts %}{% if post.the_user == username %}
+					{% for post in user_posts %}
 					<tr>
 						<td>{{ post.title }}</td>
 						<td>{{ post.date }}</td>
-						<td>Reply, edit, delete</td>
+						<td>					
+							<form method="post" action="deletepost/authenticate">
+							<input type="hidden" value="{{ post.title }}" name="post-delete">
+							<button class="btn btn-primary" type="submit">Delete</button>
+							</form>
+						</td>
 					</tr>
-					{% endif %}
 					{% endfor %}
 					{% else %}
 					<tr>
