--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,12 +19,12 @@
 		</figure>
 	</aside>
 	<div class="col-lg-9">
-		<ul class="nav nav-pills">
-			<li class="active"><a href="#Merps" data-toggle="pill">Merps</a></li>
-			<li><a href="#Own" data-toggle="pill">Your posts</a></li>
+		<ul class="nav nav-tabs">
+			<li class="active"><a href="#Merps" data-toggle="tab">Merps</a></li>
+			<li><a href="#Own" data-toggle="tab">Your posts</a></li>
 		</ul>
-		<div class="pill-content">
-			<div class="pill-pane active table-responsive" id="Merps">
+		<div class="tab-content">
+			<div class="tab-pane active table-responsive" id="Merps">
 				<table class="table table-hover">
 					<tr>
 						<th>Title</th>
@@ -50,7 +50,7 @@
 					{% endif %}
 				</table>
 			</div>
-			<div class="pill-pane table-responsive" id="Own">
+			<div class="tab-pane table-responsive" id="Own">
 				<table class="table table-hover">
 					<tr>
 						<th>Title</th>
@@ -64,8 +64,8 @@
 						<td>{{ post.date }}</td>
 						<td>					
 							<form method="post" action="deletepost/authenticate">
-							<input type="hidden" value="{{ post.title }}" name="post-delete">
-							<button class="btn btn-primary" type="submit">Delete</button>
+								<input type="hidden" value="{{ post.title }}" name="post-delete">
+								<button class="btn btn-primary" type="submit">Delete</button>
 							</form>
 						</td>
 					</tr>
