--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -22,6 +22,6 @@
 		<label>Date</label>
 		<input type="date" class="form-control" name="date">
 	</div>
-	<button type="submit" class="btn btn-primary btn-large">Create</button>
+	<button type="submit" class="btn btn-primary btn-lg">Create</button>
 </form>
 {% endblock %}
