decreased button size

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -45,7 +45,7 @@
 							<td>
 								<form method="post" action="#">
 									<input type="hidden" value="{{ post.title }}" name="post-interested">
-									<button class="btn btn-primary" type="submit">Yes</button>
+									<button class="btn btn-xs btn-primary" type="submit">Yes</button>
 								</form>
 							</td>
 						</tr>
@@ -72,7 +72,7 @@
 						<td>					
 							<form method="post" action="deletepost/authenticate">
 								<input type="hidden" value="{{ post.title }}" name="post-delete">
-								<button class="btn btn-primary" type="submit">Delete</button>
+								<button class="btn btn-xs btn-primary" type="submit">Delete</button>
 							</form>
 						</td>
 					</tr>
