--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -69,15 +69,9 @@
 					<tr>
 						<td>{{ post.title }}</td>
 						<td>{{ post.date }}</td>
-						<td>
-							<form method="post" action="#">
-								<input type="hidden" value="" name="pay">
-								<button class="btn btn-xs btn-primary" type="submit">Pay</button>
-							</form>
-							<form method="post" action="deletepost/authenticate">
-								<input type="hidden" value="{{ post.title }}" name="post-delete">
-								<button class="btn btn-xs" type="submit">Delete</button>
-							</form>
+						<td class="btn-group">
+							<button class="btn btn-xs btn-primary" formmethod="post" name="pay" type="submit">Pay</button>
+							<button class="btn btn-xs" formmethod="post" value="{{ post.title }}" name="post-delete" action="deletepost/authenticate" type="submit">Delete</button>
 						</td>
 					</tr>
 					{% endfor %}
