Proper display on smaller screens

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="page-header"><h1>Dashboard</h1></div>
 <div class="row">
-	<aside class="col-lg-3 text-center">
+	<aside class="col-lg-3 col-md-4 col-sm-5 text-center">
 		<figure class="thumbnail">
 			<img src="{{ picture }}" alt="Profile picture">
 			<figcaption class="caption">
@@ -18,7 +18,7 @@
 			</figcaption>
 		</figure>
 	</aside>
-	<div class="col-lg-9">
+	<div class="col-lg-9 col-md-8 col-sm-7">
 		<ul class="nav nav-tabs">
 			<li class="active"><a href="#Merps" data-toggle="tab">Merps</a></li>
 			<li><a href="#Own" data-toggle="tab">Your posts</a></li>
