Proper site title

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-	<title>{% if page %}{{page}}&nbsp;&ndash;&nbsp;{% endif %}So College</title>
+	<title>{% if page %}{{page}}&nbsp;&ndash;&nbsp;{% endif %}MerpIt!</title>
 </head>
 <body style="padding-top: 50px;">
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"><div class="container">
