--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,25 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="jumbotron text-center">
-	<h1>Introducing MerpIt!</h1>
-	<h3>Made for college students, by college students.</h3>
-		<ul>
-			<li>Are you a college student? Do you need quick cash?</li>
-			<li>MerpIt helps you find work!</li>
-			<li>Whether you want work, or need work, MerpIt is the place for you.</li>
-			<li>And because it's mostly college students, you can trust the labor!</li>
-			<li>Register and start earning cash, now!</li>
-		</ul>
-
-	{% if 'username' not in session %}
+<div class="jumbotron text-center" style="background-image: url('{{ url_for('static', filename='jumbotron.JPG') }}'); color: #EEEEEE;">
+	<h1>MerpIt!</h1>
+	<h2>Made for college students, by college students.</h2>
+	{% if 'username' not in session %}<div class="btn-group">
 		<a class="btn btn-lg btn-primary" href="{{ url_for('signin') }}">Sign in</a>
 		<a class="btn btn-lg btn-primary" href="{{ url_for('signup') }}">Sign up</a>
-	{% endif %}
-
+	</div>{% endif %}
+</div>
+<div class="row">
+	<div class="col-lg-4 col-md-4 col-sm-4">
+		<h2>Helping broke college students.</h2>
+		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+	</div>
+	<div class="col-lg-4 col-md-4 col-sm-4">
+		<h2>Get high-quality people and results.</h2>
+		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+	</div>
+	<div class="col-lg-4 col-md-4 col-sm-4">
+		<h2>Payments made easy.</h2>
+		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+	</div>
 </div>
 {% endblock %}
