--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -72,10 +72,11 @@
 					<tr>
 						<td>{{ post.title }}</td>
 						<td>{{ post.date }}</td>
-						<td><div class="btn-group">
-							<button class="btn btn-xs btn-primary" formmethod="post" name="pay" type="submit">Pay</button>
-							<button class="btn btn-xs" formmethod="post" value="{{ post.title }}" name="post-delete" action="deletepost/authenticate" type="submit">Delete</button>
-						</div></td>
+						<td>
+						<form action="/pay_customer" method="post">
+							<button class="btn btn-xs btn-primary" type="submit"><input type="hidden" name="title" value="{{ post.title }}">Pay</button>
+						</form>
+						</td
 					</tr>
 					{% endfor %}
 					{% else %}
