--- a/templates/home.html
+++ b/templates/home.html
@@ -10,16 +10,16 @@
 </div>
 <div class="row">
 	<div class="col-lg-4 col-md-4 col-sm-4">
-		<h2>Helping broke college students.</h2>
-		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+		<h2>Helping broke college students become, unbroke!</h2>
+		<p>College students are notoriously poor. MerpIt enables these college students to find quick cash.</p>
 	</div>
 	<div class="col-lg-4 col-md-4 col-sm-4">
-		<h2>Get high-quality people and results.</h2>
-		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+		<h2>Get high-quality workers and results. </h2>
+		<p>On the other side, when you are in a pickle, you can easily get quick, reliable help!</p>
 	</div>
 	<div class="col-lg-4 col-md-4 col-sm-4">
 		<h2>Payments made easy.</h2>
-		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+		<p>Making and receiving payments has never been so easy. We incorporate payments through Venmo. Never worry about writing checks again!</p>
 	</div>
 </div>
 {% endblock %}
